# DjangoPet

./: .gitignore  README.md  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
config/: .env.example
hello_world/: urls.py
hello_world/settings/: __init__.py
hello_world/settings/components/: __init__.py  caches.py  common.py  logging.py
hello_world/settings/environments/: development.py  production.py
hello_world/templates/: index.html
